Improved culture implementation